# concordium-rust-smart-contracts

./: .gitignore  .gitmodules  CTS1.rst  Cargo.toml  README.md  deny.toml  rustfmt.toml
concordium-cis1/: CHANGELOG.md  Cargo.toml
concordium-cis1/src/: lib.rs
concordium-cis2/: CHANGELOG.md  Cargo.toml  README.md
concordium-cis2/src/: cis2_client.rs  lib.rs
concordium-std/: CHANGELOG.md  Cargo.toml  README.md
concordium-std-derive/: CHANGELOG.md  Cargo.toml  README.md
concordium-std-derive-test/: Cargo.toml
concordium-std-derive-test/src/: lib.rs
concordium-std-derive/src/: lib.rs
concordium-std-derive/tests/: test.rs
concordium-std-derive/tests/test-programs/: fail-acc-invalid-base58.rs  fail-acc-invalid-base58.stderr  fail-acc-multiple-arguments.rs  fail-acc-multiple-arguments.stderr  fail-acc-not-a-string.rs  fail-acc-not-a-string.stderr  fail-contract-invalid.rs  fail-contract-invalid.stderr  fail-missing-env.rs  fail-missing-env.stderr  fail-pk25519-invalid-hex.rs  fail-pk25519-invalid-hex.stderr  fail-pk25519-length.rs  fail-pk25519-length.stderr  success.rs
concordium-std/src/: auth.rs  bump_alloc.rs  constants.rs  impls.rs  lib.rs  prims.rs  state_btree.rs  test_env.rs  test_infrastructure.rs  traits.rs  types.rs
concordium-std/src/test_infrastructure/: trie.rs
concordium-std/tests/: dbg.rs  derives.rs  proc-macros.rs
concordium-std/tests/dbg/: success.rs
concordium-std/tests/derive-deletable/: success-assoc-type.rs  success-hygienic.rs  success-ident-param.rs
concordium-std/tests/derive-deserial/: fail-colliding-forward.rs  fail-colliding-forward.stderr  fail-colliding-tag-forward.rs  fail-colliding-tag-forward.stderr  fail-colliding-tag.rs  fail-colliding-tag.stderr  fail-forward-collide-with-inferred.rs  fail-forward-collide-with-inferred.stderr  fail-forward-gt-repr.rs  fail-forward-gt-repr.stderr  fail-forward-without-repr.rs  fail-forward-without-repr.stderr  fail-tag-collide-with-inferred.rs  fail-tag-collide-with-inferred.stderr  fail-tag-gt-repr.rs  fail-tag-gt-repr.stderr  fail-tag-without-repr.rs  fail-tag-without-repr.stderr  success-attributes.rs  success-forward-attribute.rs  success-generics.rs  success-hygienic.rs  success-simple.rs
concordium-std/tests/derive-deserial-with-state/: fail-colliding-forward.rs  fail-colliding-forward.stderr  fail-colliding-tag-forward.rs  fail-colliding-tag-forward.stderr  fail-colliding-tag.rs  fail-colliding-tag.stderr  fail-forward-collide-with-inferred.rs  fail-forward-collide-with-inferred.stderr  fail-forward-gt-repr.rs  fail-forward-gt-repr.stderr  fail-forward-without-repr.rs  fail-forward-without-repr.stderr  fail-tag-collide-with-inferred.rs  fail-tag-collide-with-inferred.stderr  fail-tag-gt-repr.rs  fail-tag-gt-repr.stderr  fail-tag-without-repr.rs  fail-tag-without-repr.stderr  success-assoc-type.rs  success-generics.rs  success-hygienic.rs  success-ident-param.rs
concordium-std/tests/derive-schema-type/: fail-colliding-forward.rs  fail-colliding-forward.stderr  fail-colliding-tag-forward.rs  fail-colliding-tag-forward.stderr  fail-colliding-tag.rs  fail-colliding-tag.stderr  fail-forward-collide-with-inferred.rs  fail-forward-collide-with-inferred.stderr  fail-forward-gt-repr.rs  fail-forward-gt-repr.stderr  fail-forward-without-repr.rs  fail-forward-without-repr.stderr  fail-tag-collide-with-inferred.rs  fail-tag-collide-with-inferred.stderr  fail-tag-gt-repr.rs  fail-tag-gt-repr.stderr  fail-tag-without-repr.rs  fail-tag-without-repr.stderr  success-attributes.rs  success-forward-attribute.rs  success-generics.rs  success-simple.rs  success-transparent.rs
concordium-std/tests/derive-serial/: fail-colliding-forward.rs  fail-colliding-forward.stderr  fail-colliding-tag-forward.rs  fail-colliding-tag-forward.stderr  fail-colliding-tag.rs  fail-colliding-tag.stderr  fail-forward-collide-with-inferred.rs  fail-forward-collide-with-inferred.stderr  fail-forward-gt-repr.rs  fail-forward-gt-repr.stderr  fail-forward-without-repr.rs  fail-forward-without-repr.stderr  fail-tag-collide-with-inferred.rs  fail-tag-collide-with-inferred.stderr  fail-tag-gt-repr.rs  fail-tag-gt-repr.stderr  fail-tag-without-repr.rs  fail-tag-without-repr.stderr  success-attributes.rs  success-forward-attribute.rs  success-generics.rs  success-hygienic.rs  success-simple-struct.rs  success-simple.rs  success-state-parameter.rs  success-struct.rs
concordium-std/tests/state/: map-multiple-entries.rs  map-multiple-entries.stderr  map-multiple-state-ref-mut.rs  map-multiple-state-ref-mut.stderr
contract-testing/: CHANGELOG.md  Cargo.toml  README.md
contract-testing/src/: constants.rs  impls.rs  lib.rs  types.rs
contract-testing/src/invocation/: impls.rs  mod.rs  types.rs
contract-testing/tests/: account-signature-checks.rs  all_new_host_functions.rs  basics.rs  checkpointing.rs  contract_queries.rs  counter.rs  error_codes.rs  fallback.rs  iterator.rs  queries.rs  recorder.rs  relaxed_restrictions.rs  self_balance.rs  transfer.rs  upgrades.rs
contract-testing/tests/helpers/: mod.rs
examples/account-signature-checks/: Cargo.toml
examples/account-signature-checks/src/: lib.rs
examples/auction/: Cargo.toml
examples/auction/src/: lib.rs
examples/bump-alloc-tests/: Cargo.toml
examples/cis1-multi/: Cargo.toml
examples/cis1-wccd/: Cargo.toml
examples/cis2-dynamic-nft/: Cargo.toml  test_cis2_dynamic
examples/cis2-multi-royalties/: Cargo.toml
examples/cis2-nft/: Cargo.toml
examples/cis2-wccd/: Cargo.toml
examples/cis3-nft-gasless-txs/: Cargo.toml
examples/cis3-nft-sponsored-txs/: Cargo.toml  README.md
examples/credential-registry/: Cargo.toml  README.md
examples/credential-registry-storage-contract/: Cargo.toml
examples/cts1-multi/: Cargo.toml
examples/eSealing/: Cargo.toml
examples/erc721/: Cargo.toml
examples/erc721/src/: lib.rs
examples/factory/: Cargo.toml
examples/fib/: Cargo.toml
examples/icecream/: Cargo.toml
examples/marketplace-contract/: Cargo.toml
examples/multi/: Cargo.toml
examples/new-state/: Cargo.toml
examples/piggy-bank/: Cargo.toml  README.md
(+197 files in other folders)
