[package]
name = "offchain-transfer"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Offchain transfer settlement smart contract."
readme = "./README.md"

[features]
default = ["std"]

std = ["concordium-std/std"]

[dependencies]
byteorder = "1.3"

[dependencies.concordium-std]
git = "https://github.com/Concordium/concordium-std.git"
branch = "main"
version = "3.0"
default-features = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3