[package]
name = "concordium-cis2"
version = "0.1.2"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A collection of types for implementing CIS-2 Concordium Token Standard."
homepage = "https://github.com/Concordium/concordium-rust-smart-contracts/"
repository = "https://github.com/Concordium/concordium-rust-smart-contracts/"
readme = "./README.md"

[dependencies.concordium-std]
path = "../concordium-std"
version = "3.0"
default-features = false

[features]
default = ["std"]
std = ["concordium-std/std"]

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = "s"
