[package]
name = "concordium-cis2"
version = "3.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A collection of types for implementing CIS-2 Concordium Token Standard."
homepage = "https://github.com/Concordium/concordium-rust-smart-contracts/"
repository = "https://github.com/Concordium/concordium-rust-smart-contracts/"
readme = "./README.md"

[dependencies.concordium-std]
path = "../concordium-std"
version = "6.2"
default-features = false

[dependencies.primitive-types]
version = "0.11"
default-features = false

[features]
default = ["std"]
std = ["concordium-std/std"]
u256_amount = []

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = "s"

[package.metadata.docs.rs]
# This sets the default target to `wasm32-unknown-unknown` and only builds that
# target on docs.rs. This is useful because the some parts of documentation only
# exist on that platform.
targets = ["wasm32-unknown-unknown"]
# Default features to build documentation for.
features = ["std", "u256_amount"]