[package]
name = "concordium-cis2"
version = "6.2.0"
authors = ["Concordium <developers@concordium.com>"]
rust-version = "1.73"
edition = "2021"
license = "MPL-2.0"
description = "A collection of types for implementing CIS-2 Concordium Token Standard."
homepage = "https://github.com/Concordium/concordium-rust-smart-contracts/"
repository = "https://github.com/Concordium/concordium-rust-smart-contracts/"
readme = "./README.md"

[dependencies.concordium-std]
path = "../concordium-std"
version = "10.0"
default-features = false

[dependencies.primitive-types]
version = "0.11"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["alloc", "derive"]
optional = true
default-features = false

[dependencies.concordium-contracts-common]
path = "../concordium-rust-sdk/concordium-base/smart-contracts/contracts-common/concordium-contracts-common"
version = "9.0"
optional = true
default-features = false

[features]
default = ["std"]
std = ["concordium-std/std"]
u256_amount = []
serde = [
    "dep:serde",
    "concordium-contracts-common/derive-serde",
    "primitive-types/impl-serde",
]

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = "s"

[package.metadata.docs.rs]
# This sets the default target to `wasm32-unknown-unknown` and only builds that
# target on docs.rs. This is useful because the some parts of documentation only
# exist on that platform.
targets = ["wasm32-unknown-unknown"]
# Default features to build documentation for.
features = ["std", "u256_amount", "serde"]
rustc-args = ["--cfg", "docsrs"]
