[package]
name = "concordium-std-derive"
authors = ["Concordium <developers@concordium.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MPL-2.0"
description = "Procedural macros to generate concordium type constants from strings, that makes writing smart contracts on the Concordium blockchain easier."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# Replace with new version, obviously...
concordium-contracts-common = { git = "https://github.com/Concordium/concordium-base.git", branch = "const-hashbytes-new", features = [ "derive-serde" ] }
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"

