[package]
name = "concordium-std-derive"
authors = ["Concordium <developers@concordium.com>"]
version = "6.0.1-alpha.1"
edition = "2021"
rust-version = "1.73"
license = "MPL-2.0"
description = "Procedural macros to generate concordium type constants from strings, that makes writing smart contracts on the Concordium blockchain easier."
homepage = "https://github.com/Concordium/concordium-rust-smart-contracts/"
repository = "https://github.com/Concordium/concordium-rust-smart-contracts/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
concordium-contracts-common = { path = "../concordium-rust-sdk/concordium-base/smart-contracts/contracts-common/concordium-contracts-common", features = [ "derive-serde" ], version = "9" }
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"

