[package]
name = "concordium-std"
version = "4.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A standard library for writing smart contracts for the Concordium blockchain in Rust."
homepage = "https://github.com/Concordium/concordium-rust-smart-contracts/"
repository = "https://github.com/Concordium/concordium-rust-smart-contracts/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Reduce code size, at the cost of performance in allocation heavy-code.
wee_alloc="0.4.5"
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
secp256k1 = { version = "0.22", optional = true }
ed25519-zebra = { version = "2.2", optional = true }
quickcheck = {version = "1", optional = true }
getrandom = { version = "0.2", features = ["custom"], optional = true }

[dependencies.concordium-std-derive]
path = "../concordium-std-derive"
version = "4.2"

[dependencies.concordium-contracts-common]
path = "../concordium-contracts-common/concordium-contracts-common"
version = "4.1"
default-features = false

[features]
default = ["std"]

std = ["concordium-contracts-common/std"]
wasm-test = ["concordium-std-derive/wasm-test"]
build-schema = ["concordium-std-derive/build-schema"]
crypto-primitives = ["sha2", "sha3", "secp256k1", "ed25519-zebra"]
concordium-quickcheck = ["concordium-std-derive/concordium-quickcheck", "getrandom", "quickcheck", "concordium-contracts-common/concordium-quickcheck"]

[lib]
crate-type = ["rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
trybuild = "1.0"
# Don't unwind on panics, just trap.
# panic = "abort"



[package.metadata.docs.rs]
# This sets the default target to `wasm32-unknown-unknown` and only builds that
# target on docs.rs. This is useful because the some parts of documentation only
# exist on that platform.
targets = ["wasm32-unknown-unknown"]
