[package]
name = "concordium-smart-contract-testing"
version = "4.2.0"
edition = "2021"
rust-version = "1.72"
license = "MPL-2.0"
readme = "README.md"
description = "A companion crate to `concordium-std` that supports off-chain end-to-end testing of smart contracts."
homepage = "https://github.com/Concordium/concordium-rust-smart-contracts"
repository = "https://github.com/Concordium/concordium-rust-smart-contracts"
exclude = ["tests"] # Do not publish tests.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = {version = "4", path = "../concordium-rust-sdk"}
tokio = { version = "1.28", features = ["rt-multi-thread", "time"] }
sha2 = "0.10"
anyhow = "1"
thiserror = "1.0"
num-bigint = "0.4"
num-integer = "0.1"

[dev-dependencies]
rand = "0.8"
