[package]
name = "auction-smart-contract"
version = "0.1.0"
authors = ["Concordium AG <info@concordium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# concordium-std = "*"
concordium-std = {path = "../../concordium-std"}

[lib]
crate-type=["cdylib", "rlib"]