[package]
name = "auction-smart-contract"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std", "wee-alloc"]
std = ["concordium-std/std"]
wee-alloc = ["concordium-std/wee-alloc"]

[dependencies]
concordium-std = {path = "../../concordium-std", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]
