[package]
name = "cis2_dynamic_nft"
version = "0.1.0"
authors = [ "bogachanyigitbasi" ]
edition = "2021"
license = "MPL-2.0"
description = " "

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "7.0", default-features = false}
concordium-cis2 = {version = "4.0", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
