[package]
name = "cis2_dynamic_nft"
version = "0.1.0"
authors = [ "Concordium <developers@concordium.com>" ]
edition = "2021"
license = "MPL-2.0"
description = "An example implementation of the CIS-2 Concordium Token Standard containing dynamic NFTs"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = {path = "../../concordium-std", default-features = false}
concordium-cis2 = {path = "../../concordium-cis2", default-features = false}

[dev-dependencies]
concordium-smart-contract-testing = { path = "../../contract-testing" }
concordium-std-derive = { path = "../../concordium-std-derive" }

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
