[package]
name = "cis3_nft_gasless_txs"
version = "0.1.0"
authors = [ "Concordium <developers@concordium.com>" ]
edition = "2018"
license = "MPL-2.0"
description = "cis3-nft-project"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
crypto-primitives = ["concordium-std/crypto-primitives"]

[dependencies]
concordium-std = {path = "../../concordium-std", default-features = false}
concordium-cis2 = {path = "../../concordium-cis2", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
