[package]
name = "mysomeid"
version = "0.1.0"
authors = [ "Aleš Bizjak <ab@concordium.com>" ]
edition = "2018"
license = "MPL-2.0"
description = "Contract that holds MySoMeId soul bound tokens."

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std", "concordium-std/crypto-primitives"]
wee_alloc = ["concordium-std/wee_alloc"]
crypto-primitives = ["concordium-std/crypto-primitives"]

[dependencies]
concordium-std = {path = "../../concordium-std", default-features = false}
concordium-cis2 = {path = "../../concordium-cis2", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
