# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "credential_registry"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Concordium <developers@concordium.com>" ]
description = "Example-credential-registry"

[features]
default = ["std", "crypto-primitives", "wee_alloc"]
std = ["concordium-std/std", "concordium-cis2/std"]
wee_alloc = ["concordium-std/wee_alloc"]
crypto-primitives = ["concordium-std/crypto-primitives"]

[dependencies]
concordium-std = {path = "../../concordium-std", version = "8.0", default-features = false, features = ["concordium-quickcheck"]}
concordium-cis2 = {path = "../../concordium-cis2", version = "5.0", default-features = false}
quickcheck = {version = "1"}

[dev-dependencies]
concordium-smart-contract-testing = {path = "../../contract-testing"}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
