[package]
name = "e_sealing"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["std", "use-wee-alloc"]
std = ["concordium-std/std"]
use-wee-alloc = ["concordium-std/use-wee-alloc"]

[dependencies]
concordium-std = {path = "../../concordium-std", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
