[package]
name = "factory-smart-contract"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std", "bump_alloc"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { path = "../../concordium-std", version = "10.0", default-features = false, features = [
    "p7",
] }

[dev-dependencies]
concordium-smart-contract-testing = { path = "../../contract-testing" }

[lib]
crate-type = ["cdylib", "rlib"]
