[package]
name = "new-state"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# concordium-std = "*"
concordium-std = {path = "../../concordium-std"}
concordium-cis1 = {path = "../../concordium-cis1"}

[lib]
crate-type=["cdylib", "rlib"]
